# ant_template_builder

./: .gitignore  LICENSE  README.md  antennal_lobe_metadata.csv  metadata.csv  metadata_AL.csv  pyproject.toml  requirements.txt  rescale.ijm  run_registration_gui.sh  run_warping_gui.sh  scratch.ipynb  whole_brain_metadata.csv
group_registration/: make_executable.sh  run_antennal_lobe_template_builder.sh  run_antennal_lobe_template_builder2.sh  run_antennal_lobe_template_builder_btp.sh  run_antennal_lobe_template_builder_mtc.sh  run_registration.sh  run_second_stage_registration.sh  run_template_builder.sh  run_template_refinement.sh  run_template_reg_refinement.sh  run_whole_brain_template_builder.sh  run_whole_brain_template_builder2.sh  run_whole_brain_template_builder3.sh  run_whole_brain_template_builder_alt.sh  run_whole_brain_template_builder_btp.sh  run_whole_brain_template_builder_mtc.sh  update_ANTs.sh
group_registration/ANTs/: index.md
group_registration/alternate_template_scripts/: run_antennal_lobe_template_builder_btp_RA.sh  run_antennal_lobe_template_builder_mtc2.sh  run_whole_brain_template_builder_btp_RA.sh  (+1 more)
scripts/: UI_registration.py  UI_warp.py  UI_warping.py  asymmetrize.py  asymmetrize_resampled.py  generate_hires_template.py  generate_mirror.py  generate_mirror.sh  generate_refined_template.py  generate_video.py  mirror.py  registration_gui.py  resample.py  resampler-backup.py  resampler.py  reset_resampled.py  reset_symmetry.py  template_resample_btp.py  template_resample_mtc.py  template_resample_new.py
(+17 files in other folders)
